@@ -4,12 +4,12 @@ import java.util.Comparator;
 
 class EventTimeComparator implements Comparator<Event> { 
     public int compare(Event e1, Event e2) {
-        int timeComparison = new Double(e1.getTime()).compareTo(new Double(e2.getTime()));
+        int timeComparison = Double.valueOf(e1.getTime()).compareTo(e2.getTime());
 
         if (timeComparison != 0) {
             return timeComparison;
         }
 
-        return new Integer(e1.getEventPriority()).compareTo(new Integer(e2.getEventPriority()));
+        return Integer.valueOf(e1.getEventPriority()).compareTo(e2.getEventPriority());
     }
 }
